--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ owner:
   google:
     plus: #username
     analytics:
-    verify:
+    verify: tljSTYGvcNCOYKOllocqg7cGIHXUpoygZBMUKs9Ynyk
     ad-client:
     ad-slot: 
   bing-verify:
