--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description: The only way to code.
 logo: logo.png
 search: false
-url: http://localhost:4000
+url: http://log-driven-development.github.io
 
 # Jekyll configuration
 
