--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ owner:
   pinterest: #username
   google:
     plus: #username
-    analytics:
+    analytics: UA-61313374-1
     verify: tljSTYGvcNCOYKOllocqg7cGIHXUpoygZBMUKs9Ynyk
     ad-client:
     ad-slot: 
